Added button to open safari preferences

--- a/Are.na for Safari/Base.lproj/MainMenu.xib
+++ b/Are.na for Safari/Base.lproj/MainMenu.xib
@@ -715,6 +715,9 @@
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" metaFont="system"/>
                                 </buttonCell>
+                                <connections>
+                                    <action selector="openSafari:" target="Voe-Tx-rLC" id="C0b-Kx-Sy5"/>
+                                </connections>
                             </button>
                         </subviews>
                         <constraints>
